GNOME Bugzilla – Bug 659213
power: memory leaks
Last modified: 2011-09-16 08:04:43 UTC
device_to_variant_blob leaks the icon engine_recalculate_state_icon leaks the icon
Good catch: commit 15dcc15bd1900911bb336747fb856d71cda7198a Author: Richard Hughes <richard@hughsie.com> Date: Fri Sep 16 09:04:18 2011 +0100 power: Do not leak the icon when getting device status Resoves https://bugzilla.gnome.org/show_bug.cgi?id=659213