power: Do not leak the icon when getting device status

Resoves https://bugzilla.gnome.org/show_bug.cgi?id=659213